2006-08-23 15:40  lmacken

	* modifyrepo.py, bin/modifyrepo: Initial import

2006-08-11 16:03  pnasrat

	* createrepo.spec: update date

2006-08-11 16:01  pnasrat

	* genpkgmetadata.py, docs/createrepo.8: Patch from Hans-Peter
	  Jansen <hpj@urpla.net> -C, --checkts option added to avoid
	  metadata generation, if ctime filestamps are up to date. It's
	  currently mutually exclusive with the --split option.

2006-07-28 15:49  pnasrat

	* genpkgmetadata.py: Fix cache output dir to 0.4.5 behaviour

2006-07-28 15:42  pnasrat

	* genpkgmetadata.py: Fix filtering out path from file list and
	  passing correct path to writeMetaData

2006-07-28 15:35  pnasrat

	* test/: testMetaDataGenerator.py, testSplitMetaDataGenerator.py:
	  nuke tests for now

2006-07-21 13:16  pnasrat

	* Makefile: Bump

2006-07-20 18:27  pnasrat

	* genpkgmetadata.py: Make splitmetadata handler do it' own
	  getFileList to correctly manipulate paths.

2006-07-20 18:22  pnasrat

	* test/testSplitMetaDataGenerator.py: Improve tests for split cases

2006-07-20 17:15  pnasrat

	* test/testSplitMetaDataGenerator.py: duplicate for split tests

2006-07-20 17:02  pnasrat

	* test/testMetaDataGenerator.py: More consistent naming Relative
	  and parallel dir testing

2006-07-20 16:34  pnasrat

	* test/testMetaDataGenerator.py: Refactor tests, add additional
	  tests

2006-07-20 16:09  pnasrat

	* test/testMetaDataGenerator.py: Start unit testing so we don't
	  regress behaviour

2006-07-20 13:33  pnasrat

	* genpkgmetadata.py: Set outputdir correctly

2006-07-20 13:20  pnasrat

	* genpkgmetadata.py: Move to split basedir and directory everywhere
	  to preserve command line paths.  Use os.path.walk rather than our
	  own implementation Improve error messages

2006-07-19 15:43  pnasrat

	* genpkgmetadata.py: Consistent directory handling and errors

2006-07-19 15:43  pnasrat

	* createrepo.spec: genpkgmetadata.py

2006-07-19 15:25  pnasrat

	* dumpMetadata.py: Patch from hpj@urpla.net to use a more robust