@@ -1,3 +1,8 @@
+2006-10-14 01:30  lmacken
+
+	* Makefile, bin/Makefile, createrepo.spec: Makefile changes for
+	modifyrepo, and added it to the spec as well.
+
 2006-08-23 15:40  lmacken
 
 	* modifyrepo.py, bin/modifyrepo: Initial import
